# Gunhead-connect

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  EULA.md  Gunhead-Connect.code-workspace  KillAPIConnect.manifest  MainWindow.cpp  MainWindow.h  README.md  Toolchain.cmake  all_do.bat  all_do.ps1  all_do.sh  assets.qrc  build-simple.ps1  build.ps1  cmake_config.cmake.txt  gdbinit  killapi.pro  quick-build.ps1  reliable-build.ps1  simple-build.ps1  tests_include-b12d07c.cmake
.fc_cache/json-build/: nlohmann_json.pc
.fc_cache/json-subbuild/: CMakeLists.txt
.fc_cache/json-subbuild/json-populate-prefix/src/json-populate-stamp/: json-populate-urlinfo.txt
.github/workflows/: discord-webhook.yml
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Testing/Temporary/: CTestCostData.txt
Tests/: test_log_parser.cpp  test_maths.cpp  test_npc.py
buildfiles/: KillAPIConnectPlus.wxs  README.txt  Terms.md  compile_commands.json
data/: logfile_regex_rules.json
devtools/: Data-Flow.md  NextSteps.md  Translations.md  build-linux.sh  build-qt-dynamic.ps1  build-qt-static.ps1  build-windows.bat  deploy_log.txt  design-considerations.md  filestructure.txt
includes/: CustomTitleBar.h  FilterUtils.h  GameLauncher.h  LanguageSelect.h  LoadingScreen.h  LogDisplayWindow.h  MainWindow.h  ResizeHelper.h  SettingsWindow.h  SoundPlayer.h  ThemeManager.h  ThemeSelect.h  Transmitter.h  checkversion.h  globals.h  language_manager.h  log_parser.h  logger.h  logmonitor.h  network.h  qt_logger.h  version.h.in  window_utils.h
resources/: appicon.rc  appicon.rc.in  resources.qrc
resources/themes/: allThemeSettings.json  darkvictorian.qss  dracula.qss  longcold.qss  maidcafe.qss  milspec.qss  originalsleek.qss  reflectiveside.qss
resources/translations/: 1runxlates.sh  gunhead-connect.pro  lang_de.qm  lang_de.ts  lang_en.qm  lang_en.ts  lang_es.qm  lang_es.ts  lang_fr.qm  lang_fr.ts  lang_it.qm  lang_it.ts  lang_ja.qm  lang_ja.ts  lang_ko.qm  lang_ko.ts  lang_kr.ts  lang_pl.qm  lang_pl.ts  lang_pt.qm  lang_pt.ts  lang_ru.qm  lang_ru.ts  lang_ua.ts  lang_uk.qm  lang_uk.ts  lang_zh.qm  lang_zh.ts  lang_zh_CN.ts  update_en_translations.py
src/: CustomTitleBar.cpp  GameLauncher.cpp  LanguageSelect.cpp  LoadingScreen.cpp  LogDisplayWindow.cpp  MainWindow.cpp  ResizeHelper.cpp  SettingsWindow.cpp  SoundPlayer.cpp  ThemeManager.cpp  ThemeSelect.cpp  Transmitter.cpp  checkversion.cpp  globals.cpp  language_manager.cpp  log_parser.cpp  logger.cpp  logmonitor.cpp  main.cpp  network.cpp
ui/: mainwindow.ui
